Fixed overflow problem on home page

--- a/css/cover.sass
+++ b/css/cover.sass
@@ -61,6 +61,7 @@ body
 
 .navbar-brand
   padding-top: 15px
+  padding-left: 15px
 
 .container-fluid
   padding: 0px
